[gd_scene load_steps=3 format=3 uid="uid://dqfqwyx30vv60"]

[ext_resource type="Script" path="res://japanese_learning_screen.gd" id="1_6q52s"]
[ext_resource type="Texture2D" uid="uid://bms6sl45l418h" path="res://audioButton.png" id="2_sfa35"]

[node name="JapaneseLearningScreen" type="Node2D"]
script = ExtResource("1_6q52s")

[node name="JapaneseWordLabel" type="Label" parent="."]
offset_left = 154.0
offset_top = 67.0
offset_right = 212.0
offset_bottom = 90.0

[node name="RomanjiLabel" type="Label" parent="."]
offset_left = 151.0
offset_top = 99.0
offset_right = 191.0
offset_bottom = 122.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(8, 79)
volume_db = 6.559

[node name="PlayAudioButton" type="Button" parent="."]
offset_left = 473.0
offset_top = 40.0
offset_right = 508.0
offset_bottom = 76.0
icon = ExtResource("2_sfa35")
icon_alignment = 1
expand_icon = true

[node name="ChoiceButton1" type="Button" parent="."]
offset_left = 37.0
offset_top = 283.0
offset_right = 143.0
offset_bottom = 309.0

[node name="ChoiceButton2" type="Button" parent="."]
offset_left = 28.0
offset_top = 323.0
offset_right = 186.0
offset_bottom = 355.0

[node name="ChoiceButton3" type="Button" parent="."]
offset_left = 24.0
offset_top = 377.0
offset_right = 132.0
offset_bottom = 408.0

[node name="ChoiceButton4" type="Button" parent="."]
offset_left = 20.0
offset_top = 432.0
offset_right = 142.0
offset_bottom = 467.0

[connection signal="pressed" from="PlayAudioButton" to="." method="_on_PlayAudioButton_pressed"]
[connection signal="pressed" from="ChoiceButton1" to="." method="_on_choice_button_1_pressed"]
[connection signal="pressed" from="ChoiceButton2" to="." method="_on_choice_button_2_pressed"]
[connection signal="pressed" from="ChoiceButton3" to="." method="_on_choice_button_3_pressed"]
[connection signal="pressed" from="ChoiceButton4" to="." method="_on_choice_button_4_pressed"]
